--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Display</title>
     <style>
+        @font-face {
+            font-family: 'Press Start 2P';
+            src: url('press%20start.ttf') format('truetype');
+        }
         body {
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
+            flex-direction: column;
+        }
+        h1 {
+            font-family: 'Press Start 2P', sans-serif;
+            color: #e635f0;
+            font-size: 2.5em; /* Adjust the font size as needed */
+            margin: 100px 0 20px 0;
+            text-align: center;
         }
         img {
             max-width: 100%;
@@ -20,6 +32,7 @@
     </style>
 </head>
 <body>
+    <h1>KOVID PAL ODOUARD!</h1>
     <img src="images/eclipse.JPG" alt="Eclipse">
 </body>
 </html>
