--- a/index.html
+++ b/index.html
@@ -9,30 +9,64 @@
             font-family: 'Press Start 2P';
             src: url('press%20start.ttf') format('truetype');
         }
+        @font-face {
+            font-family: 'Pixelon';
+            src: url('pixelon.ttf') format('truetype');
+        }
         body {
             display: flex;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
-            flex-direction: column;
+            position: relative;
+            overflow: hidden;
         }
-        h1 {
-            font-family: 'Press Start 2P', sans-serif;
-            color: #e635f0;
-            font-size: 2.5em; /* Adjust the font size as needed */
-            margin: 100px 0 20px 0;
-            text-align: center;
+        .container {
+            position: relative;
         }
         img {
-            max-width: 100%;
+            width: 70%; /* Adjust image size to 70% */
             height: auto;
+            display: block;
+        }
+        .overlay-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: #e635f0;
+            animation: textResize 4s infinite;
+        }
+        .overlay-text h1 {
+            font-family: 'Press Start 2P', sans-serif;
+            margin: 0;
+            font-size: 2em;
+        }
+        .overlay-text p {
+            font-family: 'Pixelon', sans-serif;
+            margin: 10px 0 0 0;
+            font-size: 1em;
+        }
+        @keyframes textResize {
+            0%, 100% {
+                font-size: 2em;
+            }
+            50% {
+                font-size: 4em;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>KOVID PAL ODOUARD!</h1>
-    <img src="images/eclipse.JPG" alt="Eclipse">
+    <div class="container">
+        <img src="images/eclipse.JPG" alt="Eclipse">
+        <div class="overlay-text">
+            <h1>KOVID PAL ODOUARD!</h1>
+            <p>now has a website!</p>
+        </div>
+    </div>
 </body>
 </html>
