animation edits, new bk color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background-color: #b5e9f5;
             position: relative;
             overflow: hidden;
         }
@@ -33,12 +33,13 @@
         }
         .overlay-text {
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 80%; /* Adjust this value for vertical positioning */
+            left: 20%; /* Adjust this value for horizontal positioning */
             transform: translate(-50%, -50%);
             text-align: center;
             color: #e635f0;
             animation: textResize 4s infinite;
+            line-height: 1em; /* Set a fixed line height */
         }
         .overlay-text h1 {
             font-family: 'Press Start 2P', sans-serif;
