--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         }
         .overlay-text {
             position: absolute;
-            top: 80%; /* Adjust this value for vertical positioning */
+            top: 30%; /* Adjust this value for vertical positioning */
             left: 20%; /* Adjust this value for horizontal positioning */
             transform: translate(-50%, -50%);
-            text-align: center;
+            text-align: left;
             color: #e635f0;
             animation: textResize 4s infinite;
             line-height: 1em; /* Set a fixed line height */
