no more text wrapping

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             color: #e635f0;
             animation: textResize 4s infinite;
             line-height: 1em; /* Set a fixed line height */
+            white-space: nowrap; /* Prevent text from wrapping */
+
         }
         .overlay-text h1 {
             font-family: 'Press Start 2P', sans-serif;
