text update.html

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         }
         .additional-text {
             position: absolute;
-            top: 30%; /* Adjust this value for vertical positioning */
+            top: 20%; /* Adjust this value for vertical positioning */
             left: 1.5%; /* Adjust this value for horizontal positioning */
-            color: #e635f0;
+            color: #f2ca5a;
             font-family: 'Pixelon', sans-serif;
-            font-size: 1em;
+            font-size: 1.2em;
             line-height: 1.5em;
-            max-width: 35%; /* Limit of how far it goes before wrapping */
+            max-width: 25%; /* Limit of how far it goes before wrapping */
         }
         @keyframes textResize {
             0%, 100% {
@@ -79,7 +79,7 @@
             <p>now has a website!</p>
         </div>
         <div class="additional-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat, libero non eleifend viverra, velit purus posuere eros, id cursus dui justo ac sem.
+            an archive to store / a place to share the things i create. to hell with corporate-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code. will add some links to this soon!
         </div>
     </div>
 </body>
