--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }
         .additional-text {
             position: absolute;
-            top: 20%; /* Adjust this value for vertical positioning */
+            top: 22%; /* Adjust this value for vertical positioning */
             left: 1.5%; /* Adjust this value for horizontal positioning */
             color: #f2ca5a;
             font-family: 'Pixelon', sans-serif;
@@ -79,7 +79,7 @@
             <p>now has a website!</p>
         </div>
         <div class="additional-text">
-            an archive to store / a place to share the things i create. to hell with corporate-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code. will add some links to this soon!
+            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code. i'll add some links to this soon!
         </div>
     </div>
 </body>
