--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>now has a website!</p>
         </div>
         <div class="additional-text">
-            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code. i'll add some links to this soon!
+            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with chat gpt, lol). the principles are consistent, i swear! links to be added...
         </div>
     </div>
 </body>
