text update.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
             line-height: 1.5em;
             max-width: 25%; /* Limit of how far it goes before wrapping */
         }
+        .imagecaption-text {
+            position: absolute;
+            top: 95%;
+            left: 1.5% 
+            color: #f2ca5a;
+            font-family: 'Pixelon', sans-serif;
+            font-size: 1.2em;
+            line-height: 1.5em;
+            white-space: nowrap;
+        }
         @keyframes textResize {
             0%, 100% {
                 font-size: 1.5em;
@@ -79,7 +89,9 @@
             <p>now has a website!</p>
         </div>
         <div class="additional-text">
-            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with chat gpt, lol). the principles are consistent, i swear! links to be added...
+            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! links to be added...
+        <div class="additional-text">
+            photo: accidental mewing session @ wash during solar eclipse (taken by quinn kammer)
         </div>
     </div>
 </body>
