--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             position: absolute;
             top: 95%;
             left: 1.5% 
-            color: #f2ca5a;
+            color: #b5e9f5;
             font-family: 'Pixelon', sans-serif;
-            font-size: 1.2em;
+            font-size: 0.8em;
             line-height: 1.5em;
             white-space: nowrap;
         }
@@ -90,7 +90,7 @@
         </div>
         <div class="additional-text">
             an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! links to be added...
-        <div class="additional-text">
+        <div class="imagecaption-text">
             photo: accidental mewing session @ wash during solar eclipse (taken by quinn kammer)
         </div>
     </div>
