image caption added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             margin: 10px 0 0 0;
             font-size: 1em;
         }
-        .additional-text {
+        .mainblurb-text {
             position: absolute;
             top: 22%; /* Adjust this value for vertical positioning */
             left: 1.5%; /* Adjust this value for horizontal positioning */
@@ -63,13 +63,11 @@
         }
         .imagecaption-text {
             position: absolute;
-            top: 95%;
-            left: 1.5% 
+            left: 1.5%;
+            bottom: 5%; /* Adjust this value for vertical positioning */
             color: #b5e9f5;
             font-family: 'Pixelon', sans-serif;
-            font-size: 0.8em;
-            line-height: 1.5em;
-            white-space: nowrap;
+            font-size: 1em;
         }
         @keyframes textResize {
             0%, 100% {
@@ -88,10 +86,11 @@
             <h1>KOVID PAL ODOUARD!</h1>
             <p>now has a website!</p>
         </div>
-        <div class="additional-text">
+        <div class="mainblurb-text">
             an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! links to be added...
+        </div>
         <div class="imagecaption-text">
-            photo: accidental mewing session @ wash during solar eclipse (taken by quinn kammer)
+            Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
         </div>
     </div>
 </body>
