slight positioning change

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         }
         .imagecaption-text {
             position: absolute;
-            left: 1.5%;
-            bottom: 5%; /* Adjust this value for vertical positioning */
-            color: #b5e9f5;
+            left: 0.5%;
+            bottom: 1%; /* Adjust this value for vertical positioning */
+            color: #e635f0;
             font-family: 'Pixelon', sans-serif;
-            font-size: 1em;
+            font-size: 0.8em;
         }
         @keyframes textResize {
             0%, 100% {
