--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             position: absolute;
             left: 0.5%;
             bottom: 1%; /* Adjust this value for vertical positioning */
-            color: #e635f0;
+            color: #ffffff;
             font-family: 'Pixelon', sans-serif;
             font-size: 0.8em;
         }
