--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             margin: 10px 0 0 0;
             font-size: 1em;
         }
-        .mainblurb-text {
+        .additional-text {
             position: absolute;
             top: 22%; /* Adjust this value for vertical positioning */
             left: 1.5%; /* Adjust this value for horizontal positioning */
@@ -61,13 +61,22 @@
             line-height: 1.5em;
             max-width: 25%; /* Limit of how far it goes before wrapping */
         }
-        .imagecaption-text {
+        .imagecaption {
             position: absolute;
-            left: 0.5%;
-            bottom: 1%; /* Adjust this value for vertical positioning */
-            color: #ffffff;
+            left: 1.5%;
+            bottom: 5%; /* Adjust this value for vertical positioning */
+            color: #b5e9f5;
             font-family: 'Pixelon', sans-serif;
-            font-size: 0.8em;
+            font-size: 1em;
+        }
+        .lil-message-text {
+            position: absolute;
+            right: 1.5%;
+            bottom: 5%; /* Adjust this value for vertical positioning */
+            color: #79e896;
+            font-family: 'Pixelon', sans-serif;
+            transform: rotate(25deg);
+            animation: textResizeRandom 4s infinite;
         }
         @keyframes textResize {
             0%, 100% {
@@ -77,7 +86,27 @@
                 font-size: 2.5em;
             }
         }
+        @keyframes textResizeRandom {
+            0% {
+                font-size: 0.5em;
+            }
+            100% {
+                font-size: 1em;
+            }
+        }
     </style>
+    <script>
+        function setRandomAnimationDuration() {
+            const element = document.querySelector('.lil-message-text');
+            const randomDuration = Math.random() * 3 + 2; // Random duration between 2 and 5 seconds
+            element.style.animationDuration = `${randomDuration}s`;
+        }
+
+        window.onload = function() {
+            setRandomAnimationDuration();
+            setInterval(setRandomAnimationDuration, 100); // Update duration at the beginning of each loop
+        };
+    </script>
 </head>
 <body>
     <div class="container">
@@ -86,12 +115,16 @@
             <h1>KOVID PAL ODOUARD!</h1>
             <p>now has a website!</p>
         </div>
-        <div class="mainblurb-text">
+        <div class="additional-text">
             an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! links to be added...
         </div>
-        <div class="imagecaption-text">
+        <div class="imagecaption">
             Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
+        </div>
+        <div class="lil-message-text">
+            yo jay check out this leaf
         </div>
     </div>
 </body>
 </html>
+
