restoring older version

--- a/index.html
+++ b/index.html
@@ -63,20 +63,11 @@
         }
         .imagecaption {
             position: absolute;
-            left: 0.5%;
-            bottom: 1%; /* Adjust this value for vertical positioning */
-            color: #ffffff;
+            left: 1.5%;
+            bottom: 5%; /* Adjust this value for vertical positioning */
+            color: #b5e9f5;
             font-family: 'Pixelon', sans-serif;
             font-size: 1em;
-        }
-        .lil-message-text {
-            position: absolute;
-            left: 90%;
-            bottom: 5%; /* Adjust this value for vertical positioning */
-            color: #79e896;
-            font-family: 'Pixelon', sans-serif;
-            transform: rotate(-40deg);
-            animation: textResizeRandom 3s infinite;
         }
         @keyframes textResize {
             0%, 100% {
@@ -86,15 +77,7 @@
                 font-size: 2.5em;
             }
         }
-        @keyframes textResizeRandom {
-            0% {
-                font-size: 0.5em;
-            }
-            100% {
-                font-size: 1em;
-            }
-        }
-    </script>
+    </style>
 </head>
 <body>
     <div class="container">
@@ -109,10 +92,6 @@
         <div class="imagecaption">
             Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
         </div>
-        <div class="lil-message-text">
-            yo jay check out this leaf
-        </div>
     </div>
 </body>
 </html>
-
