--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         }
         .imagecaption {
             position: absolute;
-            left: 1.5%;
-            bottom: 5%; /* Adjust this value for vertical positioning */
-            color: #b5e9f5;
+            left: 0.5%;
+            bottom: 1%; /* Adjust this value for vertical positioning */
+            color: #ffffff;
             font-family: 'Pixelon', sans-serif;
             font-size: 1em;
         }
