--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         }
         .container {
             position: relative;
+            width: 70%; /* Adjust container size to 70% of the viewport */
+            max-width: 70%;
         }
         img {
-            width: 70%; /* Adjust image size to 70% */
+            width: 100%; /* Image takes the full width of the container */
             height: auto;
             display: block;
         }
@@ -71,7 +73,7 @@
         }
         .lil-message-text {
             position: absolute;
-            left: 99%; /* Adjust this value for horizontal positioning */
+            right: 1%; /* Adjust this value for horizontal positioning */
             bottom: 1%; /* Adjust this value for vertical positioning */
             color: #79e896;
             font-family: 'Pixelon', sans-serif;
@@ -111,7 +113,7 @@
             Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
         </div>
         <div class="lil-message-text">
-            yo jay, check out this leaf
+            Enjoy the view!
         </div>
     </div>
 </body>
