--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
         </div>
         <div class="lil-message-text">
-            Enjoy the view!
+            yo jay, check out this leaf
         </div>
     </div>
 </body>
