--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
         }
         .lil-message-text {
             position: absolute;
-            right: 2%; /* Adjust this value for horizontal positioning */
-            bottom: 2%; /* Adjust this value for vertical positioning */
+            right: 5%; /* Adjust this value for horizontal positioning */
+            bottom: 5%; /* Adjust this value for vertical positioning */
             color: #79e896;
+            text-align: center;
             font-family: 'Pixelon', sans-serif;
             font-size: 0.5em;
             transform: rotate(-35deg);
