--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -7,30 +7,33 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('press%20start.ttf') format('truetype');
+            src: url('mamaroneck-23/press start.ttp') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('pixelon.ttf') format('truetype');
-        }
+            src: url('mamaroneck-23/pixelon.ttp') format('truetype');
         }
         body {
             background-color: #f7edc1;
             margin: 0;
             padding: 0;
-            font-family: 'Press Start 2P', sans-serif;
-            color: #52370f;
         }
         header {
             text-align: center;
             padding: 20px 0;
+            color: #52370f;
+            font-family: 'Press Start 2P', sans-serif;
+            font-size: 30pt;
+        }
+        .made-by {
+            text-align: center;
+            color: #52370f;
+            font-family: 'Pixelon', sans-serif;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>ART FROM MAMARONECK, NY: 2023</h1>
-    </header>
-    <!-- Your content goes here -->
+    <header>ART FROM MAMARONECK, NY: 2023</header>
+    <div class="made-by">made by Kovid Pal Odouard</div>
 </body>
 </html>
