update for mamo site

--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -15,22 +15,30 @@
         }
         }
         body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: #f7edc1;
             margin: 0;
             padding: 0;
             font-family: 'Press Start 2P', sans-serif;
             color: #52370f;
         }
-        header {
-            text-align: center;
-            padding: 20px 0;
+        .heading-text h1 {
+            font-family: 'Press Start 2P', sans-serif;
+            margin: 0;
+            font-size: 2em;
+        }
+        .heading-text p {
+            font-family: 'Pixelon', sans-serif;
+            margin: 10px 0 0 0;
+            font-size: 1 em;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>ART FROM MAMARONECK, NY: 2023</h1>
-    </header>
-    <!-- Your content goes here -->
+    <div class = "heading-text"
+    <h1>ART FROM MAMARONECK, NY: 2023</h1>
+    <p>by Kovid Pal Odouard!</p>
 </body>
 </html>
