--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -7,33 +7,38 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('mamaroneck-23/press start.ttp') format('truetype');
+            src: url('press%20start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('mamaroneck-23/pixelon.ttp') format('truetype');
+            src: url('pixelon.ttf') format('truetype');
+        }
         }
         body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: #f7edc1;
             margin: 0;
             padding: 0;
-        }
-        header {
-            text-align: center;
-            padding: 20px 0;
-            color: #52370f;
             font-family: 'Press Start 2P', sans-serif;
-            font-size: 30pt;
-        }
-        .made-by {
-            text-align: center;
             color: #52370f;
+        }
+        .heading-text h1 {
+            font-family: 'Press Start 2P', sans-serif;
+            margin: 0;
+            font-size: 2em;
+        }
+        .heading-text p {
             font-family: 'Pixelon', sans-serif;
+            margin: 10px 0 0 0;
+            font-size: 1 em;
         }
     </style>
 </head>
 <body>
-    <header>ART FROM MAMARONECK, NY: 2023</header>
-    <div class="made-by">made by Kovid Pal Odouard</div>
+    <div class = "heading-text"
+    <h1>ART FROM MAMARONECK, NY: 2023</h1>
+    <p>by Kovid Pal Odouard!</p>
 </body>
 </html>
