--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Display</title>
+    <title>Kovid Pal Odouard's site</title>
     <style>
         @font-face {
             font-family: 'Press Start 2P';
