text color change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             position: absolute;
             top: 22%; /* Adjust this value for vertical positioning */
             left: 1.5%; /* Adjust this value for horizontal positioning */
-            color: #facb0f;
+            color: #fcd303;
             font-family: 'Pixelon', sans-serif;
             font-size: 1.2em;
             line-height: 1.5em;
