--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             font-size: 1.2em;
             line-height: 1.5em;
             max-width: 25%; /* Limit of how far it goes before wrapping */
-            text-shadow: 0 0 0 #bd7306; /* Apply text shadow with desired color */
+            text-shadow: 2px 2px #bd7306; /* Apply text shadow with desired color */
         }
         .imagecaption {
             position: absolute;
