epic drop shadow

--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
             font-family: 'Press Start 2P', sans-serif;
             margin: 0;
             font-size: 2em;
+            text-shadow: 3.5px 3.5px #47fc77;
         }
         .overlay-text p {
             font-family: 'Pixelon', sans-serif;
             margin: 10px 0 0 0;
             font-size: 1em;
+            text-shadow: 2px 2px #47fc77;
         }
         .additional-text {
             position: absolute;
