--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -33,6 +33,7 @@
         .heading-text h1 {
             font-size: 50px; /* Changed font size */
             margin: 0;
+            text-shadow: 5.5px 2px #bd9b55;
         }
         
         .heading-text p {
