--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
+            transform: translate(-50%, -50%);
             background-color: #D0B884;
             width: calc(100% + 16px); /* 8px wider on each side */
             height: calc(100% + 16px); /* 8px taller on each side */
@@ -116,6 +117,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
+            transform: translate(-50%, -50%);
             background-color: #543D0D;
             width: calc(100% + 24px); /* Additional 8px for the shadow */
             height: calc(100% + 24px); /* Additional 8px for the shadow */
