--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             display: inline-block;
             font-family: 'Pixelon', sans-serif;
             font-size: 1.2em;
-            color: #fF2EAD3;
-            text-decoration: none;
+            color: #f2EAD3;
             text-shadow: 3px 3px #86BBBD;
             padding: 8px; /* Add padding for background */
             background-color: #D0B884;
@@ -105,9 +104,6 @@
         .link-element::after {
             content: '';
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             background-color: #543D0D;
             width: calc(100% + 8px); /* 4px wider on each side for the shadow */
             height: calc(100% + 8px); /* 4px taller on each side for the shadow */
