--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             color: #f2EAD3;
             text-shadow: 2px 2px #86BBBD;
             padding: 8px; /* Add padding for background */
-            background-color: #D0B884;
+            background-color: #543D0D; 
             text-decoration: none; /* Remove underline from text */
         }
         .link-element::after {
@@ -108,11 +108,11 @@
             position: absolute;
             top: 2px;
             left: 8px;
-            background-color: #543D0D;
+            background-color: #D0B884;
             width: 100%; /* Adjust width to cover full element */
             height: 100%; /* Adjust height to cover full element */
             z-index: -1;
-            box-shadow: 8px 2px #543D0D;
+            box-shadow: 2px 2px #D0B884;
         }
         @keyframes textResize {
             0%, 100% {
