--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
             color: #f2EAD3;
             text-shadow: 2px 2px #86BBBD;
             padding: 8px; /* Add padding for background */
-            background-color: #543D0D; 
+            background-color: #d0b884; 
             text-decoration: none; /* Remove underline from text */
         }
         .link-element::after {
             content: '';
             position: absolute;
-            top: 2px;
-            left: 8px;
-            background-color: #D0B884;
+            top: 1px;
+            left: 1px;
+            background-color: #543d0d;
             width: 100%; /* Adjust width to cover full element */
             height: 100%; /* Adjust height to cover full element */
             z-index: -1;
-            box-shadow: 2px 2px #D0B884;
+            box-shadow: 2px 2px #382806;
         }
         @keyframes textResize {
             0%, 100% {
