--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -16,6 +16,7 @@
         
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             background-color: #f2ead3; /* Changed background color */
@@ -41,12 +42,50 @@
             margin: 8px 0 0 0;
             font-size: 2em;
         }
+
+        .main-image {
+            margin-top: 15px;
+        }
+
+        .detail-images {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 15px;
+            width: calc(30% + 15px);
+        }
+
+        .caption {
+            text-align: left;
+            font-family: 'Pixelon', sans-serif;
+            margin-top: 10px;
+            color: #543d0d;
+            width: 30%;
+        }
+
+        .caption h2 {
+            font-size: 1em;
+            margin: 0;
+        }
+
+        .caption p {
+            font-size: 0.8em;
+            margin: 5px 0 0 0;
+        }
     </style>
 </head>
 <body>
-    <div class="heading-text"> <!-- Added closing bracket -->
+    <div class="heading-text">
         <h1>ART FROM MAMARONECK, NY: 2023</h1>
         <p>by Kovid Pal Odouard!</p>
-    </div> <!-- Added closing div tag -->
+    </div>
+    <img class="main-image" src="mamaroneck-2023/portrait of a thoughtful foreigner - main.jpg" alt="Portrait of a Thoughtful Foreigner" style="width: 30%;">
+    <div class="detail-images">
+        <img src="mamaroneck-2023/portrait of a thoughtful foreigner - detail.jpg" alt="Detail of Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
+        <img src="mamaroneck-2023/portrait of a thoughtful foreigner - process.jpg" alt="Process of Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
+    </div>
+    <div class="caption">
+        <h2>portrait of a thoughtful foreigner</h2>
+        <p>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when aranxa ortega did a little portrait of me at 59 rivoli. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</p>
+    </div>
 </body>
 </html>
