--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <div class="heading-text">
-        <h1>ART FROM MAMARONECK, NY: 2023</h1>
+        <h1>ART FROM MAMARONECK, NY: ~2023</h1>
         <p>by Kovid Pal Odouard!</p>
     </div>
     <img class="main-image" src="mamaroneck-2023/portrait of a thoughtful foreigner - main.jpg" alt="Portrait of a Thoughtful Foreigner" style="width: 30%;">
