blurb font size changes

--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -63,12 +63,12 @@
         }
 
         .caption h2 {
-            font-size: 1em;
+            font-size: 2em;
             margin: 0;
         }
 
         .caption p {
-            font-size: 0.8em;
+            font-size: 1.5em;
             margin: 5px 0 0 0;
         }
     </style>
@@ -80,12 +80,12 @@
     </div>
     <img class="main-image" src="mamaroneck-2023/portrait of a thoughtful foreigner - main.jpg" alt="Portrait of a Thoughtful Foreigner" style="width: 30%;">
     <div class="detail-images">
-        <img src="mamaroneck-2023/portrait of a thoughtful foreigner - detail.jpg" alt="Detail of Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
-        <img src="mamaroneck-2023/portrait of a thoughtful foreigner - process.jpg" alt="Process of Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
+        <img src="mamaroneck-2023/portrait of a thoughtful foreigner - detail.jpg" alt="Detail - Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
+        <img src="mamaroneck-2023/portrait of a thoughtful foreigner - process.jpg" alt="Process - Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
     </div>
     <div class="caption">
         <h2>portrait of a thoughtful foreigner</h2>
-        <p>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when aranxa ortega did a little portrait of me at 59 rivoli. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</p>
+        <p>late july, 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when aranxa ortega did a little portrait of me at 59 rivoli. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</p>
     </div>
 </body>
 </html>
