--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -63,12 +63,13 @@
         }
 
         .caption h2 {
-            font-size: 1em;
+            font-size: 1.7em;
+            text-shadow: 2px 2px #bd9b55;
             margin: 0;
         }
 
         .caption p {
-            font-size: 0.8em;
+            font-size: 1.2em;
             margin: 5px 0 0 0;
         }
     </style>
