--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/eclipse.JPG" alt="Eclipse">
+        <img src="images/eclipse.JPG" alt="kovid looking at the eclipse">
         <div class="overlay-text">
             <h1>KOVID PAL ODOUARD!</h1>
             <p>now has a website!</p>
